@@ -1,4 +1,5 @@
 1.17 -> 2.0:
+    - devzero2000: add cppcheck conditional makefile target
     - devzero2000: drop expr syntax error in make check under dash
     - devzero2000: Print to the end of the configure phase the options we have
       enabled and their results on the basis of the target system
